# Attendence_Assistant

./: .gitignore  Makefile  README.md  __init__.py  debug_image_processing.py  image_processor.py  ocr_service.py  pyproject.toml  requirements.txt  simple_debug.py  test_year_month_extraction.py  考勤助手PRD.md  考勤助手（Attendance Assistant）详细设计文档.md
attendance_assistant/: __init__.py  __main__.py
attendance_assistant/controllers/: __init__.py  main_controller.py
attendance_assistant/core/: config_manager.py  exceptions.py  models.py  utils.py  workday_calculator.py
attendance_assistant/gui/: __init__.py  attendance_calendar.py  control_panel.py  main_window.py  simple_main_window.py
attendance_assistant/resources/: __init__.py  styles.qss
attendance_assistant/resources/icons/: .gitkeep
attendance_assistant/services/: __init__.py  data_exporter.py  image_processor.py  ocr_service.py
attendance_assistant/utils/: logger.py
config/: holidays.json
config_examples/: logging_config.ini
tools/: holiday_manager.py  log_cleanup.py  log_viewer.py
