[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attendance-assistant"
version = "1.0.0"
description = "考勤图片解析可视化桌面应用程序"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "PyQt5==5.15.7",
    "paddleocr==2.6.1.3", 
    "opencv-python==4.6.0.66",
    "pandas==1.5.0",
    "numpy==1.23.4",
    "openpyxl==3.0.10",
    "python-dateutil==2.8.2"
]
requires-python = ">=3.8"

[project.scripts]
attendance-assistant = "attendance_assistant.main:main"

[tool.uv]
dev-dependencies = [
    "black",
    "flake8",
    "mypy"
]
